<resources>
    <string name="app_name">UTSproject</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login\n</string>
    <string name="register">Register Here</string>
    <string name="food_list_title">Food and Beverages</string>
    <string name="order_confirmation">ORDER CONFIRMATION</string>
    <string name="makan_yukkk">Makan Yukkk !!!</string>
    <string name="price_format">Harga: %.2f</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="batagor">Batagor</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="_3">3</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="nazwa">Nazwa</string>
    <string name="note_tambahan">Note Tambahan</string>
    <string name="selesai">Selesai</string>
    <string name="todo">TODO</string>
    <string name="tanpa_sambal">Tanpa sambal</string>
    <string name="terima_kasih_telah_memesan_nklik_selesai_untuk_kembali_ke_menu_utama">Terima kasih telah memesan! \nKlik \'Selesai\' untuk kembali ke menu utama.</string>
    <string name="doo">TODO</string>
    <string name="des">TODO</string>
    <string name="makan">Nama Makanan</string>
    <string name="jum">Jumlah Pesanan</string>
    <string name="pemesan">Nama Pemesan</string>
    <string name="note">Note Tambahan</string>
    <string name="order">Order</string>
    <string name="enter_food_name_get_from_list">Enter food name - Get From List</string>
    <string name="input_nama_pemesan">Input nama pemesan</string>
    <string name="isi_tambahan">isi tambahan</string>
    <string name="order_food">ORDER FOOD</string>
    <string name="masukan_jumlah_pesanan">Masukan jumlah pesanan</string>
    <string name="daftar">Daftar</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password">Password</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="description_of_the_food">Description of the food.</string>
    <string name="makananan">TODO</string>
    <string name="harga_rp">Harga: Rp.</string>
    <string name="food_name">Food Name</string>
</resources>