<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_pastel"
    tools:context=".OrderActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_food"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:orientation="vertical"
                    android:padding="16dp">

                        <!-- Input Nama Makanan -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/makan"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginBottom="8dp"/>

                        <EditText
                            android:id="@+id/etFoodName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:autofillHints=""
                            android:background="@drawable/button_background"
                            android:hint="@string/enter_food_name_get_from_list"
                            android:inputType=""
                            android:padding="12dp"
                            android:textColorHint="#6D4C41"
                            tools:ignore="VisualLintTextFieldSize" />

                        <!-- Input Jumlah Porsi -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:text="@string/jum"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginBottom="8dp"/>

                        <EditText
                            android:id="@+id/etServings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/button_background"
                            android:hint="@string/masukan_jumlah_pesanan"
                            android:inputType="number"
                            android:padding="12dp"
                            android:textColorHint="#6D4C41"
                            tools:ignore="Autofill,VisualLintTextFieldSize" />

                        <!-- Input Nama Pemesan -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pemesan"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginBottom="8dp"/>

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:autofillHints=""
                            android:background="@drawable/button_background"
                            android:hint="@string/input_nama_pemesan"
                            android:inputType=""
                            android:padding="12dp"
                            android:textColorHint="#6D4C41"
                            tools:ignore="VisualLintTextFieldSize" />

                        <!-- Input Catatan Tambahan -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:autofillHints=""
                            android:inputType="text"
                            android:minHeight="48dp"
                            android:text="@string/note"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="TextViewEdits" />

                        <EditText
                            android:id="@+id/etNotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/button_background"
                            android:hint="@string/isi_tambahan"
                            android:padding="12dp"
                            android:textColorHint="#6D4C41"
                            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

                        <Button
                            android:id="@+id/btnOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/order"
                            android:backgroundTint="@color/pink_pastel"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="VisualLintButtonSize" />

                </LinearLayout>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
