<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light"
    android:padding="16dp">

    <!-- Judul Halaman Register -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buat_akun_baru"
        android:layout_marginTop="125dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- CardView Container for Form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Field Username -->
            <EditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="Username"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

            <!-- Field Password -->
            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Field Konfirmasi Password -->
            <EditText
                android:id="@+id/etRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/konfirmasi_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Tombol Register -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_pastel"
                android:text="@string/daftar"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="12dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
